workshop03/ws3-env.yml
---
apiVersion: v1 
kind: Namespace 
metadata:
  name: ws3
  labels: 
    version: v1
