workshop03/app-v2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app-v2-deploy
  namespace: ws3
  labels:
    name:  app-v2-deploy
spec:
  # number of pod
  replicas: 3
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      name:  app-deploy
      version: v2
  template:
    metadata:
      name: app-v2-pod
      labels: 
        name: app-deploy
        version: v2
    spec:
      containers:
      - image:  stackupiss/northwind-app:v2
        name:  app-v2-container
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #   initialDelaySeconds: 90
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 5000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  ws3server-port
