workshop03/db-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deploy
  namespace: ws3
  labels:
    name: mysqldb-deploy
    version: v1
spec:
  replicas: 1
  minReadySeconds: 60
  selector:
    matchLabels:
      name: mysqldb-pod
  template:
    metadata:
      name: mysqldb-pod
      labels:
        name: mysqldb-pod
    spec:
      volumes:
        - name: data-volume 
          persistentVolumeClaim:
            claimName: mysqldb-pvc
      containers:
      - name: mysqldb-container
        image: zytean/nwmysql:v2
        imagePullPolicy: IfNotPresent
        livenessProbe:
              exec:
                command: 
                - bash 
                - "-c" 
                - | 
                  mysqladmin ping -uroot -p${MYSQL_ROOT_PASSWORD} | grep alive || exit
              timeoutSeconds: 5
              failureThreshold: 3
              successThreshold: 1
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: data-volume
        ports:
          - name: mysqldb-port
            containerPort: 3306
