workshop03/app-v2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-v2-svc
  namespace: ws3
spec:
  selector:
    name: app-deploy
    version: v2
  type: ClusterIP
  ports:
  - port: 80
    targetPort: ws3server-port
