workshop03/app-ingress-v2.yml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: ws3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: “false”
  namespace: ws3
  labels:
    name: ws3-ingress
    version: v1
spec:
  rules:
    - host: app1.157.230.192.32.nip.io
      http:
        paths:
          - backend:
              serviceName: app-v1-svc
              servicePort: 80
    - host: app2.157.230.192.32.nip.io
      http:
        paths:
          - backend:
              serviceName: app-v2-svc
              servicePort: 80
