workshop03/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: ws3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: “false”
  namespace: ws3
  labels:
    name: ws3-ingress
    version: v1
spec:
  rules:
  - http:
      paths:
        - path: /v1
          backend:
            serviceName: app-v1-svc
            servicePort: 80
        - path: /v2
          backend:
            serviceName: app-v2-svc
            servicePort: 80
